# gently-meta

./: LICENSE  README.md  pyproject.toml
docs/: architecture.tex
gently_meta/: __init__.py  api.py  microscope_registry.py  notifications.py  queue.py
schemas/: experiment_request.json  microscope_capability.json  sample_spec.json
tests/: __init__.py  test_queue.py
